syntax = "proto3";

package tkd.idm.v1;

import "google/protobuf/descriptor.proto";
import "google/protobuf/field_mask.proto";
import "tkd/idm/v1/user.proto";
import "tkd/common/v1/descriptor.proto";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (tkd.common.v1.auth) = {
      require: AUTH_REQ_REQUIRED
    };
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  rpc InviteUser(InviteUserRequest) returns (InviteUserResponse) {
    option (tkd.common.v1.auth) = {
      require: AUTH_REQ_REQUIRED
    };
  }

  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
    option (tkd.common.v1.auth) = {
      require: AUTH_REQ_REQUIRED
    };
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (tkd.common.v1.auth) = {
      require: AUTH_REQ_REQUIRED,
      allowed_roles: ["idm_superuser"]
    };
  }

  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {
    option (tkd.common.v1.auth) = {
      require: AUTH_REQ_REQUIRED,
      allowed_roles: ["idm_superuser"]
    };
  }

  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {
    option (tkd.common.v1.auth) = {
      require: AUTH_REQ_REQUIRED,
      allowed_roles: ["idm_superuser"]
    };
  }
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message ListUsersRequest {
  google.protobuf.FieldMask field_mask = 1;
}

message ListUsersResponse {
  repeated Profile users = 1;
}

message CreateUserRequest {
  Profile profile = 1;
  string password = 2;
  bool   password_is_bcrypt = 3;
}

message CreateUserResponse {
  Profile profile = 1;
  string generated_password = 2;
}

message UpdateUserRequest {}
message UpdateUserResponse {}
message DeleteUserRequest {
  string id = 1;
}
message DeleteUserResponse {}

message UserInvite {
  string email = 1;
  string name = 2;
}

message InviteUserRequest {
  repeated UserInvite invite = 1;
  repeated string initial_roles = 2;
}
message InviteUserResponse {}
